[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/interactive/interactive/safe2red.png" type="Texture" id=1]
[ext_resource path="res://assets/art/interactive/interactive/safe1red.png" type="Texture" id=2]
[ext_resource path="res://scenes/pickup/DoorKey.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/art/interactive/interactive/safe3red.png" type="Texture" id=4]
[ext_resource path="res://assets/art/interactive/interactive/safeWithoutFlashlight.png" type="Texture" id=5]
[ext_resource path="res://scenes/interact/ButtonSafe.gd" type="Script" id=6]
[ext_resource path="res://scenes/pickup/Flashlight.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 45 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[node name="ButtonSafe" type="Node2D"]
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="SafeWithoutFlashlight" type="Sprite" parent="Area2D"]
position = Vector2( 90, 75 )
texture = ExtResource( 5 )

[node name="Flashlight" parent="Area2D/SafeWithoutFlashlight" instance=ExtResource( 7 )]
position = Vector2( -320, -165 )

[node name="DoorKey" parent="Area2D/SafeWithoutFlashlight" instance=ExtResource( 3 )]
position = Vector2( -200, -145 )

[node name="Safe1Red" type="Sprite" parent="Area2D"]
position = Vector2( 90, 75 )
texture = ExtResource( 2 )

[node name="Safe2Red" type="Sprite" parent="Area2D"]
position = Vector2( 90, 75 )
texture = ExtResource( 1 )

[node name="Safe3Red" type="Sprite" parent="Area2D"]
position = Vector2( 90, 75 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 90, 75 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2( 90, 75 )
shape = SubResource( 1 )
